--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
+<video autoplay muted loop id="bg_video">
+  <source src="assets/video.mp4" type="video/mp4">
+</video>
 <div class="wrapper">
   
     <div class="row bbdo_ds">
-        BBDO Digital Studios
+       <span class="shadow">  BBDO Digital Studios </span>
 <!-- <td colspan="2">&nbsp;</td> -->
     </div>
     <div class="current_work">
-        Current Work
+      <span class="shadow"> Current Work </span>
 <!-- <td colspan="2">&nbsp;</td> -->
     </div>
 
@@ -190,6 +193,7 @@
         5%
       </div>
     </div>
+    <br></br>
 
     <div class="row">
       <div class="cell" data-title="Name">
@@ -232,6 +236,7 @@
         75%
       </div>
     </div>
+    <br></br>
 
     <div class="row">
       <div class="cell" data-title="Name">
@@ -262,7 +267,7 @@
         Dunkin
       </div>
       <div class="cell" data-title="Project Name">
-        March Go2 Updates
+        Sig Lattes March
       </div>
       <div class="cell" data-title="Status">
         KO
@@ -274,6 +279,7 @@
         25%
       </div>
     </div>
+    <br></br>
 
     <div class="row">
       <div class="cell" data-title="Name">
@@ -298,6 +304,28 @@
 
     <div class="row">
       <div class="cell" data-title="Name">
+        John Cardoso
+      </div>
+      <div class="cell" data-title="Client">
+        Pedigree / Exxon
+      </div>
+      <div class="cell" data-title="Project Name">
+        Mutts 4 Trucks Update
+      </div>
+      <div class="cell" data-title="Status">
+        Ongoing
+      </div>
+      <div class="cell" data-title="Producer">
+        Begun
+      </div>
+      <div class="cell" data-title="Allocation">
+        25%
+      </div>
+    </div>
+    <br></br>
+
+    <div class="row">
+      <div class="cell" data-title="Name">
         Clara Santamaria
       </div>
       <div class="cell" data-title="Client">
@@ -316,27 +344,7 @@
         0%
       </div>
     </div>
-
-    <div class="row">
-      <div class="cell" data-title="Name">
-        Clara Santamaria
-      </div>
-      <div class="cell" data-title="Client">
-        AT&T Corp.
-      </div>
-      <div class="cell" data-title="Project Name">
-        Believe Site
-      </div>
-      <div class="cell" data-title="Status">
-        Hold
-      </div>
-      <div class="cell" data-title="Producer">
-        Phil
-      </div>
-      <div class="cell" data-title="Allocation">
-        25%
-      </div>
-    </div>
+    <br></br>
 
     <div class="row">
       <div class="cell" data-title="Name">
@@ -383,7 +391,7 @@
   </div>
   
     <div class="pipeline_work">
-        Pipeline
+      <span class="shadow"> Pipeline </span>
 <!--           <td colspan="2">&nbsp;</td> -->
     </div>
 
@@ -433,19 +441,19 @@
 
     <div class="row">
       <div class="cell" data-title="Name">
-        PA Unassigned
+        Unassigned
       </div>
       <div class="cell" data-title="Client">
-        Dunkin
+        AT&T Corp.
       </div>
       <div class="cell" data-title="Project Name">
-        2x4 Social Animations
+        Believe Site
       </div>
       <div class="cell" data-title="Status">
-        Possible KO This Week
+        Pipeline
       </div>
       <div class="cell" data-title="Producer">
-        Amico
+        Phil
       </div>
       <div class="cell" data-title="Allocation">
         0%
@@ -640,6 +648,7 @@
   
 </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
 </body>
+
 </html>
