More updates to data and design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<video autoplay muted loop id="bg_video">
+<video autoplay muted playsinline loop id="bg_video">
   <source src="assets/video.mp4" type="video/mp4">
 </video>
 <div class="wrapper">
@@ -276,7 +276,7 @@
         Begun
       </div>
       <div class="cell" data-title="Allocation">
-        25%
+        50%
       </div>
     </div>
     <br></br>
@@ -363,6 +363,27 @@
         James
       </div>
       <div class="cell" data-title="Allocation">
+        25%
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="cell" data-title="Name">
+        Ray McGale
+      </div>
+      <div class="cell" data-title="Client">
+        AT&T ENT
+      </div>
+      <div class="cell" data-title="Project Name">
+        Office Signage Statics
+      </div>
+      <div class="cell" data-title="Status">
+        Ongoing
+      </div>
+      <div class="cell" data-title="Producer">
+        LA / Rustie
+      </div>
+      <div class="cell" data-title="Allocation">
         50%
       </div>
     </div>
@@ -384,7 +405,7 @@
         Kate
       </div>
       <div class="cell" data-title="Allocation">
-        50%
+        25%
       </div>
     </div>
 
